- Fixed a bug where characters without Run Faster enabled could still add Advanced Lifestyles despite them being part of Run Faster.

Data Changes:

- Added missing Transgenic Alteration bioware from Chrome Flesh. 
- Fixed incorrect price and availability for the Krime Trollbow at Ratings 11 and 12. Fixes #2929
- Fixed accuracy on the osmium mace.
- Added missing storage compartment to the Renraku Pelican.
- Corrected Avail of the Krime Whammy.
- Fixed missing spirits for the Planar Magic tradition. Fixes #2937
- Fixed incorrect mount location for the Terracotta Arms Pup's silencer.
- Added Dodge custom improvement type.
- Removed incorrect accessory mount locations from all light pistols and holdouts per Run and Gun page 51 ("Some types of weapons have further limitations—for example, light pistols can only take top and barrel-mounted accessories, while hold-outs can’t take accessories at all"). Any existing weapons that have been given accessories using these mounts should be grandfathered in without issue.
- Changed the concealment of the Altmayr SPX2 to be +2 instead of +6.
- Corrected the required node for the Summon Great Form spell to work correctly when ignoring Art requirements.
- Renamed the Silencer to Silencer/Suppressor. Hid the Suppressor. Fixes #2955
- Elastic Joints, Enhanced Articulation and Smart Articulation are now exclusive of each other. Fixes #2965
- Removed the Limit Condition from Enhanced Articulation. Fixes #2964
- Barehanded Adept now allows T and T(A) spells to be free instead of just T. Fixes #2967
- Fixed a bug where various traditions with Guidance Spirit set as one of their five spirits did not have Guidance Spirit show up properly in their lists.
- Characters following the Elder God tradition will now properly get a -2 dicepool modifier to drain resistance rolls and a +3 dicepool modifier to casting Illusion spells.